# bt_api_phemex

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_phemex/: __init__.py  plugin.py  registry_registration.py
src/bt_api_phemex/errors/: __init__.py  phemex_translator.py
src/bt_api_phemex/exchange_data/: __init__.py
src/bt_api_phemex/feeds/live_phemex/: __init__.py  request_base.py  spot.py
src/bt_api_phemex/tickers/: __init__.py  phemex_ticker.py
tests/containers/exchanges/: test_phemex_exchange_data.py
tests/containers/tickers/: test_phemex_ticker.py
tests/exchange_registers/: test_register_phemex.py
tests/feeds/: test_phemex_request_base.py
