[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bt_api_phemex"
version = "0.15.0"
description = "Phemex exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" },
]
keywords = ["bt_api", "phemex", "exchange", "trading", "api"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api"
Documentation = "https://cloudquant.github.io/bt_api/"
Repository = "https://github.com/cloudQuant/bt_api"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_phemex"]
